--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<project>
+  <xmlns>http://maven.apache.org/POM/4.0.0</xmlns>
+  <xmlns:xsi>http://www.w3.org/2001/XMLSchema-instance</xmlns:xsi>
+  <xsi:schemaLocation>http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd</xsi:schemaLocation>
   <modelVersion>4.0.0</modelVersion>
   <groupId>website.tbd.developer.site</groupId>
   <artifactId>kotlin-testsuite</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <name>kotlin-testsuite</name>
   <url>http://developer.tbd.website</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kotlin.jvm.target>17</kotlin.jvm.target>
@@ -17,7 +17,7 @@
     <version.kotlin>1.9.22</version.kotlin>
     <version.kotlin.compiler.incremental>true</version.kotlin.compiler.incremental>
     <version.junit-jupiter>5.10.1</version.junit-jupiter>
-    <version.tbdex>0.10.0-hey</version.tbdex>
+    <version.tbdex>0.12.0-beta</version.tbdex>
     <version.ktor>2.3.7</version.ktor>
   </properties>
   <dependencyManagement>
