--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -11,81 +11,128 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kotlin.jvm.target>17</kotlin.jvm.target>
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+    <version.assertj>3.25.2</version.assertj>
+    <version.kotlin>1.9.22</version.kotlin>
+    <version.kotlin.compiler.incremental>true</version.kotlin.compiler.incremental>
+    <version.junit-jupiter>5.10.1</version.junit-jupiter>
+    <version.tbdex>0.12.0-beta</version.tbdex>
+    <version.ktor>2.3.7</version.ktor>
   </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.25.2</version>
+        <version>${version.assertj}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.10.1</version>
+        <version>${version.junit-jupiter}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.10.1</version>
+        <version>${version.junit-jupiter}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-stdlib</artifactId>
-        <version>1.9.22</version>
+        <version>${version.kotlin}</version>
       </dependency>
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>tbdex</artifactId>
-        <version>0.12.0-beta</version>
+        <version>${version.tbdex}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-client-okhttp-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-client-content-negotiation-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-serialization-jackson-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-serialization-kotlinx-json-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-serialization-kotlinx-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-client-logging-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-server-netty-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
         <artifactId>ktor-server-content-negotiation-jvm</artifactId>
-        <version>2.3.7</version>
+        <version>${version.ktor}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>xyz.block</groupId>
+      <artifactId>tbdex</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-netty-jvm</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>mockwebserver</artifactId>
+      <version>4.11.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-test-host</artifactId>
+      <version>${version.ktor}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-content-negotiation-jvm</artifactId>
+    </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
@@ -130,14 +177,20 @@
         <plugin>
           <artifactId>kotlin-maven-plugin</artifactId>
           <groupId>org.jetbrains.kotlin</groupId>
-          <version>1.9.22</version>
-          <extensions>true</extensions>
-          <configuration>
-            <jvmTarget>17</jvmTarget>
-          </configuration>
+          <version>${version.kotlin}</version>
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>kotlin-maven-plugin</artifactId>
+        <groupId>org.jetbrains.kotlin</groupId>
+        <extensions>true</extensions>
+        <configuration>
+          <jvmTarget>${kotlin.jvm.target}</jvmTarget>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
   <repositories>
     <repository>
