--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: pnpm install
 
       - name: Start dwn-server container
-        run: docker-compose up -d dwn-server
+        run: docker compose up -d dwn-server
   
       - name: Wait for dwn-server to be ready
         run: until curl -sf http://localhost:3000/health; do echo -n .; sleep .1; done
