--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -48,7 +48,7 @@
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>tbdex</artifactId>
-        <version>${version.tbdex}</version>
+        <version>0.12.0-beta</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
@@ -114,6 +114,7 @@
     <dependency>
       <groupId>xyz.block</groupId>
       <artifactId>tbdex</artifactId>
+      <version>0.12.0-beta</version>
     </dependency>
     <dependency>
       <groupId>io.ktor</groupId>
