--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@tbdex/http-client": "0.0.0-next-e852f25-20240403233344",
-    "@tbdex/http-server": "0.0.0-next-e852f25-20240403233344",
-    "@tbdex/protocol": "0.0.0-next-e852f25-20240403233344",
+    "@tbdex/http-client": "1.0.0",
+    "@tbdex/http-server": "1.0.0",
+    "@tbdex/protocol": "1.0.0",
     "@web5/api": "0.8.4",
     "@web5/credentials": "1.0.0",
     "@web5/crypto": "1.0.0",
