adding kotlin version to pom.xml

--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -16,6 +16,8 @@
     <version.org.assertj>3.25.2</version.org.assertj>
     <version.org.junit.jupiter>5.10.1</version.org.junit.jupiter>
     <version.xyz.block.tbdex>commit-145bfc5-SNAPSHOT</version.xyz.block.tbdex>
+    <version.kotlin>1.9.22</version.kotlin>
+    <version.kotlin.compiler.incremental>true</version.kotlin.compiler.incremental>
   </properties>
   <dependencyManagement>
     <dependencies>
