--- a/examples/tutorials/book-reviews/package.json
+++ b/examples/tutorials/book-reviews/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@web5/api": "0.8.4"
+    "@web5/api": "0.0.0-next-c47ea5e-20240408180231"
   },
   "type": "module"
 }
