--- a/examples/tutorials/dinger-completed/package.json
+++ b/examples/tutorials/dinger-completed/package.json
@@ -11,7 +11,7 @@
     "test:browser": "start-server-and-test dev http://localhost:8081 test"
   },
   "dependencies": {
-    "@web5/api": "0.8.4",
+    "@web5/api": "0.0.0-next-c47ea5e-20240408180231",
     "crypto-browserify": "3.12.0",
     "next": "13.5.4",
     "process": "0.11.10",
