--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@heroicons/vue": "1.0.6",
     "@nuxt/ui-templates": "1.3.1",
-    "@web5/api": "0.8.4",
+    "@web5/api": "0.0.0-next-c47ea5e-20240408180231",
     "vue": "3.3.4",
     "vue-router": "4.2.5"
   }
