--- a/examples/tutorials/todo-starter/package.json
+++ b/examples/tutorials/todo-starter/package.json
@@ -20,7 +20,7 @@
     "varint": "6.0.0",
     "vue": "3.3.4",
     "vue-toastification": "2.0.0-rc.5",
-    "@web5/api": "0.8.4"
+    "@web5/api": "0.0.0-next-c47ea5e-20240408180231"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
